package com.rds.observato.api;

public interface Tool {}
