package com.rds.observato.api.model;

/** Representation of available time */
public interface Calendar {}
