// package com.rds.observato.model;
//
// public record Location(double longitude, double latitude, double altitude) {}
