// package com.rds.observato.model;
//
// public record Skill(String name, String description) {}
